# atomix

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  INSTALL  MAINTAINERS  Makefile.am  NEWS  README  README.md  acconfig.h  atomix.desktop.in  atomix.doap  autogen.sh  configure.ac  configure.in  meson.build  meson_post_install.py  org.gnome.Atomix.Devel.json  org.gnome.atomix.json
data/: Makefile.am  atomix.appdata.xml.in  atomix.desktop.in  level-transform.xsl  meson.build  org.gnome.Atomix.appdata.xml.in  org.gnome.Atomix.desktop.in  org.gnome.Atomix.metainfo.xml.in  org.gnome.Atomix.service.in
data/icons/hicolor/: Makefile.am
data/its/: Makefile.am  level.loc
data/level/: Makefile.am  aceticacid.atomix.xml  acetone.atomix.xml  butanol.atomix.xml  butanol.atomix.xml.in  cyclobutane.atomix.xml  dimethylether.atomix.xml  dimethylether.atomix.xml.in  ethanal.atomix.xml  ethane.atomix.xml  ethanol.atomix.xml  ethylene.atomix.xml  glycerin.atomix.xml  lactic-acid.atomix.xml  level.its  meson.build  methanal.atomix.xml  methane.atomix.xml  methanol.atomix.xml  methanol.atomix.xml.in  propanal.atomix.xml  propanal.atomix.xml.in  propylene.atomix.xml  pyran.atomix.xml  sequence  transbutylen.atomix.xml  water.atomix.xml
data/themes/default/: Makefile.am  theme
data/ui/: Makefile.am  interface.ui  menu.ui
level/: .cvsignore  Makefile.am  aceticacid.atomix.xml  aceticacid.old  acetone.atomix.xml  acetone.old  butanol.atomix.xml  buthanol.atomix.xml  buthanol.old  cyclo-buthane.atomix.xml  cyclo-buthane.old  cyclobutane.atomix.xml  dimethylether.atomix.xml  dimethylether.old  ethan.atomix.xml  ethan.old  ethanal.atomix.xml  ethanal.old  ethane.atomix.xml  ethanol.atomix.xml  ethanol.old  ethylene.atomix.xml  ethylene.old  formaldehyd.atomix.xml  formaldehyd.old  glycerin.atomix.xml  glycerin.old  lactic-acid.atomix.xml  lactic-acid.old  methanal.atomix.xml  methane.atomix  methane.atomix.xml  methane.old  methanol.atomix  methanol.atomix.xml  methanol.old  propanal.atomix.xml  propanal.old  propylen.atomix.xml  propylen.old  (+9 more)
po/: .cvsignore  ChangeLog  LINGUAS  Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  ar.po  atomix.pot  az.po  be.po  bg.po  bn.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fur.po  ga.po  gl.po  gu.po  he.po  hi.po  hu.po  id.po  is.po  it.gmo  (+39 more)
src/: .cvsignore  ChangeLog  Makefile.am  atomix-application.h  atomix-ui.xml  atomix-ui.xml.in  atomix.h  board-gtk.c  board-gtk.h  board-test.c  board.c  board.h  board_gtk.c  board_gtk.h  callbacks.c  callbacks.h  canvas_helper.c  canvas_helper.h  clock.c  clock.h  games-debug.c  games-debug.h  games-gtk-compat.h  games-profile.c  games-profile.h  games-runtime.c  games-runtime.h  games-score.c  games-score.h  games-scores-backend.c  games-scores-backend.h  games-scores-dialog-private.h  games-scores-dialog.c  games-scores-dialog.h  games-scores.c  games-scores.h  games-show.c  games-show.h  global.h  goal-view.c  (+34 more)
themes/default/: ChangeLog  Makefile.am  theme
