AC_PREREQ(2.52)

AC_INIT(atomix, 2.14.0, http://bugzilla.gnome.org/enter_bug.cgi?product=atomix)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AC_CONFIG_SRCDIR(src/board.c)
AM_CONFIG_HEADER(config.h)

AC_PROG_INTLTOOL

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB

GNOME_COMPILE_WARNINGS

dnl ================= Requirements =======================
LIBGNOME_REQUIRED=2.0.1
LIBGNOMEUI_REQUIRED=2.0.1
LIBXML_REQUIRED=2.4.23
GDK_PIXBUF_REQUIRED=2.0.5
#LIBGLADE_REQUIRED=2.0.0
LIBGNOMECANVAS_REQUIRED=2.0.1
LIBBONOBOUI_REQUIRED=2.0.0

dnl ******************************
dnl pkg-config checks
dnl ******************************

ATOMIX_MODULES="libgnome-2.0 >= $LIBGNOME_REQUIRED libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED libxml-2.0 >= $LIBXML_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED libgnomecanvas-2.0 >= $LIBGNOMECANVAS_REQUIRED libbonoboui-2.0 >= $LIBBONOBOUI_REQUIRED"
#libglade-2.0 >= $LIBGLADE_REQUIRED
PKG_CHECK_MODULES(ATOMIX, $ATOMIX_MODULES)
AC_SUBST(ATOMIX_CFLAGS)
AC_SUBST(ATOMIX_LIBS)

dnl *******************************
dnl Internationalization
dnl ******************************* 
GETTEXT_PACKAGE=atomix
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE")
AC_SUBST(GETTEXT_PACKAGE)

dnl Add the languages which your application supports here.
ALL_LINGUAS="am az be bg bn ca cs da de el en_CA en_GB es et fa fi fr ga gl gu he hi hu is it ja ka kn ko lt lv mk ml ms nb nl pa pl pt pt_BR ru sk sl sq sr sr@Latn sv ta tr uk vi wa zh_CN zh_HK zh_TW"
AM_GLIB_GNU_GETTEXT

EXTRA_WARNING_CFLAGS=" $warning_flags"
AC_SUBST(EXTRA_WARNING_CFLAGS)

AC_CONFIG_FILES([
Makefile
po/Makefile.in
src/Makefile
themes/Makefile
themes/default/Makefile
level/Makefile])

AC_OUTPUT
