AC_PREREQ(2.52)

AC_INIT(atomix, 2.14.0, http://bugzilla.gnome.org/enter_bug.cgi?product=atomix)
AM_INIT_AUTOMAKE([1.9 foreign no-dist-gzip dist-bzip2])

m4_ifdef([AM_SILENT_RULES],[AM_SILENT_RULES([yes])])

AC_CONFIG_SRCDIR(src/board.c)
AC_CONFIG_HEADERS([config.h])

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PROG_RANLIB

GNOME_COMMON_INIT
GNOME_COMPILE_WARNINGS([maximum])
GNOME_MAINTAINER_MODE_DEFINES

dnl ================= Requirements =======================
LIBGTK_REQUIRED=2.12.0
LIBXML_REQUIRED=2.4.23
GDK_PIXBUF_REQUIRED=2.0.5
LIBGNOMECANVAS_REQUIRED=2.0.1

dnl ******************************
dnl pkg-config checks
dnl ******************************

ATOMIX_MODULES="gtk+-2.0 >= $LIBGTK_REQUIRED libxml-2.0 >= $LIBXML_REQUIRED gdk-pixbuf-2.0 >= $GDK_PIXBUF_REQUIRED libgnomecanvas-2.0 >= $LIBGNOMECANVAS_REQUIRED"
PKG_CHECK_MODULES(ATOMIX, $ATOMIX_MODULES)
AC_SUBST(ATOMIX_CFLAGS)
AC_SUBST(ATOMIX_LIBS)

dnl *******************************
dnl Internationalization
dnl ******************************* 

IT_PROG_INTLTOOL([0.35.0])

GETTEXT_PACKAGE=atomix
AC_DEFINE_UNQUOTED([GETTEXT_PACKAGE],["$GETTEXT_PACKAGE"],[Gettext domain])
AC_SUBST(GETTEXT_PACKAGE)

AM_GLIB_GNU_GETTEXT


AC_CONFIG_FILES([
Makefile
po/Makefile.in
src/Makefile
themes/Makefile
themes/default/Makefile
level/Makefile])

AC_OUTPUT
