leveldir = $(pkgdatadir)/level

level_files = \
	aceticacid.atomix.xml \
	acetone.atomix.xml \
	buthanol.atomix.xml \
	cyclo-buthane.atomix.xml \
	dimethylether.atomix.xml \
	ethan.atomix.xml \
	ethanal.atomix.xml \
	ethanol.atomix.xml \
	ethylene.atomix.xml \
	formaldehyd.atomix.xml \
	glycerin.atomix.xml \
	lactic-acid.atomix.xml \
	methane.atomix.xml \
	methanol.atomix.xml \
	propanal.atomix.xml \
	propylen.atomix.xml \
	pyran.atomix.xml \
	transbutylen.atomix.xml \
	water.atomix.xml

level_DATA = $(level_files) sequence
