leveldir = $(pkgdatadir)/level

level_files = \
	aceticacid.atomix.xml \
	acetone.atomix.xml \
	butanol.atomix.xml \
	cyclobutane.atomix.xml \
	dimethylether.atomix.xml \
	ethane.atomix.xml \
	ethanal.atomix.xml \
	ethanol.atomix.xml \
	ethylene.atomix.xml \
	glycerin.atomix.xml \
	lactic-acid.atomix.xml \
	methanal.atomix.xml \
	methane.atomix.xml \
	methanol.atomix.xml \
	propanal.atomix.xml \
	propylene.atomix.xml \
	pyran.atomix.xml \
	transbutylen.atomix.xml \
	water.atomix.xml

level_DATA = $(level_files) sequence
