themesdir = $(pkgdatadir)/themes
themedir = $(themesdir)/default

THEME = \
	c.png \
	h.png \
	o.png \
	link1.png \
	link2.png \
	link3.png \
	link4.png \
	link5.png \
	link6.png \
	link7.png \
	link8.png \
	link9.png \
	link10.png \
	link11.png \
	link12.png \
	wall1.png \
	wall2.png \
	wall-corner1.png \
	wall-corner2.png \
	wall-corner3.png \
	wall-corner4.png \
	selector.png \
	floor.png \
	shadow1.png \
	shadow2.png \
	shadow3.png \
	shadow4.png \
	shadow5.png \
	shadow6.png \
	theme 

theme_DATA = $(THEME)

EXTRA_DIST = $(THEME)
