themesdir = $(pkgdatadir)/themes
themedir = $(themesdir)/default

THEME = \
	arrow-bottom.png \
	arrow-left.png \
	arrow-right.png \
	arrow-top.png \
	atom-c.png \
	atom-f.png \
	atom-h.png \
	atom-n.png \
	atom-o.png \
	cursor.png \
	floor.png \
	link-bottom-double.png \
	link-bottom-left.png \
	link-bottom-right.png \
	link-bottom.png \
	link-left-double.png \
	link-left.png \
	link-right-double.png \
	link-right.png \
	link-top-double.png \
	link-top-left.png \
	link-top-right.png \
	link-top.png \
	shadow-bottom-right.png \
	shadow-left-top.png \
	shadow-left.png \
	shadow-top-left-both.png \
	shadow-top-left.png \
	shadow-top.png \
	theme \
	wall-bottom-left.png \
	wall-bottom-right.png \
	wall-horizontal-left-end.png \
	wall-horizontal-right-end.png \
	wall-horizontal-bottomx.png \
	wall-horizontal-topx.png \
	wall-horizontal.png \
	wall-single.png \
	wall-top-left.png \
	wall-top-right.png \
	wall-vertical-bottom-end.png \
	wall-vertical-leftx.png \
	wall-vertical-rightx.png \
	wall-vertical-top-end.png \
	wall-vertical.png

theme_DATA = $(THEME)

EXTRA_DIST = $(THEME)
